--- a/css/layout.css
+++ b/css/layout.css
@@ -41,6 +41,12 @@ main {
   margin: 9px 16px;
 }
 
+
+
+
+/* ============================================== */
+/* HERO */
+/* ============================================== */
 #hero {
   position: relative;
   height: 100vh;
